--- a/drivers/interconnect/qcom/Makefile
+++ b/drivers/interconnect/qcom/Makefile
@@ -16,6 +16,7 @@ qnoc-sdm660-objs			:= sdm660.o
 qnoc-sdm845-objs			:= sdm845.o
 qnoc-scuba-objs				:= scuba.o
 qnoc-sdx55-objs				:= sdx55.o
+qnoc-lemans-objs			:= lemans.o
 qnoc-sm8150-objs			:= sm8150.o
 qnoc-sm8250-objs			:= sm8250.o
 qnoc-sm8350-objs			:= sm8350.o
@@ -49,6 +50,7 @@ obj-$(CONFIG_INTERCONNECT_QCOM_SM8350) += qnoc-sm8350.o
 obj-$(CONFIG_INTERCONNECT_QCOM_CINDER) += qnoc-cinder.o
 obj-$(CONFIG_INTERCONNECT_QCOM_WAIPIO) += qnoc-waipio.o
 obj-$(CONFIG_INTERCONNECT_QCOM_SCUBA) += qnoc-scuba.o
+obj-$(CONFIG_INTERCONNECT_QCOM_LEMANS) += qnoc-lemans.o
 obj-$(CONFIG_INTERCONNECT_QCOM_BENGAL) += qnoc-bengal.o
 obj-$(CONFIG_INTERCONNECT_QCOM_RPM) += icc-rpm.o
 obj-$(CONFIG_INTERCONNECT_QCOM_SMD_RPM) += icc-smd-rpm.o
