--- a/drivers/clk/qcom/Makefile
+++ b/drivers/clk/qcom/Makefile
@@ -66,6 +66,7 @@ obj-$(CONFIG_QCS_TURING_404) += turingcc-qcs404.o
 obj-$(CONFIG_QDRU_ECPRICC_CINDER) += ecpricc-cinder.o
 obj-$(CONFIG_QDRU_GCC_CINDER) += gcc-cinder.o
 obj-$(CONFIG_QDRU_DEBUGCC_CINDER) += debugcc-cinder.o
+obj-$(CONFIG_SA_CAMCC_LEMANS) += camcc-lemans.o
 obj-$(CONFIG_SA_GCC_LEMANS) += gcc-lemans.o
 obj-$(CONFIG_SC_CAMCC_7180) += camcc-sc7180.o
 obj-$(CONFIG_SC_CAMCC_8180X) += camcc-sc8180x.o
