--- a/drivers/clk/qcom/Makefile
+++ b/drivers/clk/qcom/Makefile
@@ -67,6 +67,7 @@ obj-$(CONFIG_QDRU_ECPRICC_CINDER) += ecpricc-cinder.o
 obj-$(CONFIG_QDRU_GCC_CINDER) += gcc-cinder.o
 obj-$(CONFIG_QDRU_DEBUGCC_CINDER) += debugcc-cinder.o
 obj-$(CONFIG_SA_CAMCC_LEMANS) += camcc-lemans.o
+obj-$(CONFIG_SA_DEBUGCC_LEMANS) += debugcc-lemans.o
 obj-$(CONFIG_SA_DISPCC_LEMANS) += dispcc0-lemans.o dispcc1-lemans.o
 obj-$(CONFIG_SA_GCC_LEMANS) += gcc-lemans.o
 obj-$(CONFIG_SA_GPUCC_LEMANS) += gpucc-lemans.o
