interconnect: qcom: Enable QoS for Lemans
Enable QoS for the master ports on lemans with predefined
values for priority and urgency.

Change-Id: I1ebc7ec5a6a6cc23ac572b1654070fd7478a545d
Signed-off-by: Veera Vegivada <quic_vvegivad@quicinc.com>

--- a/drivers/interconnect/qcom/Kconfig
+++ b/drivers/interconnect/qcom/Kconfig
@@ -260,6 +260,7 @@ config INTERCONNECT_QCOM_LEMANS
 	depends on QCOM_RPMH && QCOM_COMMAND_DB && OF
 	select INTERCONNECT_QCOM_BCM_VOTER
 	select INTERCONNECT_QCOM_RPMH
+	select INTERCONNECT_QCOM_QOS
 	help
 	  This is a driver for the Qualcomm Technologies, Inc. Network-on-Chip
 	  on lemans-based platforms. The interconnect provider collects and
