netfilter: ipt_trigger:  support Port Triggering Feature in kernel
Enables IP_NF_TARGET_TRIGGER config which implemenets port trigger
action which occur on any matching packet.
Incoming connections are allowed on forward port/port range if there is
a corresponding outgoing connection on the trigger port/port range.
Patch ported from:
https://code.rdkcentral.com/r/plugins/gitiles/rdk/components/generic/rdk-oe/meta-cmf-raspberrypi/+/refs/heads/rdk-next/recipes-kernel/linux/files/0001-add-support-for-port-triggering.patch.

Change-Id: Iab42372dee2ec6050ab0f2a5342aaf3a5d8f4390
[quic_evangeli@quicinc.com: remove unneeded prints and
resolve minor formatting issues"].
Signed-off-by: Evangelin Ruby N <quic_evangeli@quicinc.com>
Signed-off-by: Desireddy Suresh Kumar Reddy <quic_dsureshk@quicinc.com>

--- a/net/ipv4/netfilter/Kconfig
+++ b/net/ipv4/netfilter/Kconfig
@@ -200,6 +200,20 @@ config IP_NF_TARGET_REJECT
 
 	  To compile it as a module, choose M here.  If unsure, say N.
 
+#  Support Port Triggering in kernel
+config IP_NF_TARGET_TRIGGER
+        tristate "TRIGGER target support"
+        depends on NF_NAT
+        default m if NETFILTER_ADVANCED=n
+        help
+          Implemenets  port trigger action which occur on any matching packet.
+	  TRIGGER is a special case of NAT: used to support Port Triggering
+	  Feature in kernel all incoming connections are allowed on
+	  forward port/port range if there is a corresponding outgoing
+	  connection on the trigger port/port range
+
+          To compile it as a module, choose M here.  If unsure, say N.
+
 config IP_NF_TARGET_SYNPROXY
 	tristate "SYNPROXY target support"
 	depends on NF_CONNTRACK && NETFILTER_ADVANCED
