soc: qcom: subsystem_stats: snapshot of subsystem stats driver
subsystem stats driver snapshot from msm-5.15 branch
'commit ba7a2cfd542d ("Merge "remoteproc: Add shutdown completion signal
in AoN RTOS Exit"")'.

Change-Id: Ia6e5a66add2c54c9e0d275c523f257e4d96e9acd
Signed-off-by: Raghavendra Kakarla <quic_rkakarla@quicinc.com>

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -80,6 +80,15 @@ config QCOM_GENI_SE
 	  driver is also used to manage the common aspects of multiple Serial
 	  Engines present in the QUP.
 
+config QCOM_SUBSYSTEM_SLEEP_STATS
+	tristate "Qualcomm Technologies, Inc. Subsystem sleep stats driver"
+	depends on QCOM_SMEM
+	help
+	  This driver is IOCTL implementation to get the subsystem stats data
+	  from SMEM. Stats information such as sleep count, last entered at,
+	  last exited at and accumulated duration can be read from
+	  userspace with ioctl.
+
 config QCOM_GSBI
 	tristate "QCOM General Serial Bus Interface"
 	depends on ARCH_QCOM || COMPILE_TEST
