--- a/drivers/usb/gadget/Kconfig
+++ b/drivers/usb/gadget/Kconfig
@@ -260,7 +260,7 @@ config USB_DEFAULT_MEM_VARIANT
 
 config USB_F_FS_IPC_LOGGING
         tristate "Enable IPC logging for FunctionFS via f_fs_ipc_log"
-	depends on IPC_LOGGING
+#	depends on IPC_LOGGING
 	depends on ARM64 || ARM
 	help
 	 Enables additional debug messages for FunctionFS driver with the help
