remoteproc: Add support for slot switch support on image corruption
Add support for slot switch on image corrution which is detected at
kernel level. Perform reboot with new restart reason firmware auth
failed.

Change-Id: I84ae0146fec6a4dd346c29a03cc3db21a50cc8d7
Signed-off-by: Amrit Anand <quic_amrianan@quicinc.com>
Signed-off-by: Khaja Hussain Shaik Khaji <quic_kshaikkh@quicinc.com>

--- a/drivers/remoteproc/Kconfig
+++ b/drivers/remoteproc/Kconfig
@@ -468,6 +468,15 @@ config QCOM_DS_SKIP_Q6_STOP
 
 	  If not sure, say N.
 
+config FIRMWARE_FAIL_SAFE
+	bool "Support for reboot if there is corruption in image"
+	help
+	  This option enables reboot support with reboot reason firmware
+	  auth failed when image authentication fails at kernel level due
+	  to detection of firmware image corruption.
+
+	  If not sure, say N.
+
 endif # REMOTEPROC
 
 endmenu
