--- a/drivers/soc/qcom/Makefile
+++ b/drivers/soc/qcom/Makefile
@@ -141,3 +141,5 @@ wcd_usbss_i2c-y += wcd-usbss-utils.o
 wcd_usbss_i2c-y += wcd939x-i2c.o
 obj-$(CONFIG_QCOM_AOP_FAULT_COLLECTOR) += qcom_aop_fault_collector.o
 obj-$(CONFIG_QCOM_SAIL_MAILBOX) += qcom-sail-mbox.o
+obj-$(CONFIG_SDX_EXT_IPC) += sdx_ext_ipc.o
+obj-$(CONFIG_QTI_NOTIFY_SIDEBAND) += sideband_notify.o
