build.config.msm.sdxpinn-cpe-wkk-v1: Add CPE WKK V1 build variant
Add CPE WKK V1 build variant with different defconfig fragment on top of
base defconfig, as WKK team have few changes which are conflicting with
CPE WKK.

Change-Id: Ie4bed49602ad250cc0880a42c40eeddc569568bd
Signed-off-by: Yogesh Lal <quic_ylal@quicinc.com>

--- a/build.targets
+++ b/build.targets
@@ -1,6 +1,7 @@
 build.config.msm.cinder
 build.config.msm.sdxpinn
 build.config.msm.sdxpinn-cpe-wkk
+build.config.msm.sdxpinn-cpe-wkk-v1
 build.config.msm.sdxpinn-rdkb
 build.config.msm.sa525
 build.config.msm.sdxbaagha
