--- a/kernel/trace/Makefile
+++ b/kernel/trace/Makefile
@@ -102,6 +102,7 @@ obj-$(CONFIG_QCOM_RTB) += msm_rtb.o
 obj-$(CONFIG_TRACEPOINT_BENCHMARK) += trace_benchmark.o
 
 obj-$(CONFIG_IPC_LOGGING) += qcom_ipc_logging.o
-qcom_ipc_logging-y := ipc_logging.o  ipc_logging_debug.o
-
+qcom_ipc_logging-y := ipc_logging.o
+qcom_ipc_logging-$(CONFIG_DEBUG_FS) += ipc_logging_debug.o
+qcom_ipc_logging-$(CONFIG_IPC_LOGGING_PROCFS) += ipc_logging_proc.o
 libftrace-y := ftrace.o
