--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -855,4 +855,22 @@ config MSM_PERFORMANCE
            fmin and fmax. The user space can request  the cpu freq change by
            writing cpu#:freq values.
 
+config MSM_POWER_STATE
+	tristate "Power State driver support for Deep Sleep and Hibernate"
+	help
+	  This option enables Power State Driver which is the kernel component
+	  for supporting deep sleep and hibernate. Create a power_state device
+	  node for user space communication. User space client can open device
+	  node for communication required for handling deep sleep and hibernate
+	  modes.
+
+config DEEPSLEEP
+	bool "Deep Sleep or Suspend-to-RAM sleep state"
+	depends on MSM_POWER_STATE
+	help
+	  Set this option to enable Deep Sleep. Deep Sleep is Suspend-to-RAM
+	  sleep state, in which entire system is put in a low-power state,
+	  except for memory, so that exit from this state can happen in shorter
+	  duration.
+
 endmenu
