--- a/drivers/power/reset/Kconfig
+++ b/drivers/power/reset/Kconfig
@@ -173,6 +173,15 @@ config POWER_RESET_QCOM_RESET_REASON
 	  set as part of system restart.
 	  If unsure, say N.
 
+config POWER_RESET_QCOM_DOWNLOAD_MODE_COMPRESS
+	bool "MSM compression support for fulldump"
+	depends on ARCH_QCOM
+	help
+	  This feature is enabled when compression is required for
+	  collection of fulldump when the storage attribute is set
+	  to emmc_dload.
+	  Say Y here to enable "compression" by default.
+
 config POWER_RESET_OCELOT_RESET
 	bool "Microsemi Ocelot reset driver"
 	depends on MSCC_OCELOT || ARCH_SPARX5 || COMPILE_TEST
