--- a/net/wireless/Kconfig
+++ b/net/wireless/Kconfig
@@ -209,6 +209,15 @@ config CFG80211_WEXT_EXPORT
 	  Drivers should select this option if they require cfg80211's
 	  wext compatibility symbols to be exported.
 
+config MAC80211_STA_HASH_MAX_SIZE
+	int "Station hash table maximum size"
+	default 0
+	help
+	  Setting this option to a low value (e.g. 4) allows testing the
+	  hash table with collisions relatively deterministically (just
+	  connect more stations than the number selected here.)
+
+	  If unsure, leave the default of 0.
 endif # CFG80211
 
 config LIB80211
